CHANGELOG

== July 24, 2012
* Fixed bug on comments RSS
* Added rel, rev, and title tags to links
* Improved SEO
* Updated Zocial css and fonts

== July 18, 2012
* Improved hints on new item form
* Minor CSS improvements for item
* Updated Sidekiq/Celluloid gems
* Updated Assets

== July 17, 2012
* Updated Twitter Gem
* Moved SOLR to new instance

== July 16, 2012
* Updated Dalli fixing "key too long" error

== July 12, 2012
* Changed sidebar from 3 to 5 Top items
* Fixed RSS error on comments RSS

== July 9, 2012
* Allow Quote and italic tags on comments
* Updated Gems

== July 7, 2012
* Allows to delete Emails Deliveries properly
* Added record locking to avoid duplicated updates
* Added Custom Youtube resolution
* Removed most commented from Sidebar
* Updated Gems

== July 1-5, 2012
* Fixed Wrong ATOM feed time on article, bug #6
* Added global Comments page: /comments
* Global comments RSS: /comments.rss
* Improved admin interface
* Added number of days since items on categories
* fixed google indexing
* removed user email
* better registration form
* removed all references of the user's email address
* Forcing HTTPS always for admin users
* original author links improved
* twitter queue delete links
* minor bug fixes
* updated many gemfiles

== June 24, 2012
* Improved Original Author links
* Fixed original author link on emails
* Allow Admins to delete Twitter queue jobs
* Updated Gems
* Bundled AnyTime into a Gem

== June 23, 2012
* Improved meta tags based on google webmaster info
* Added Site Links to top menu
* Changed from H2 to H1 on landing page
* Addded H1 header on tag/language pages
* Code cleanup
* Rspec tests added

== June 22, 2012
* Added Authors to top menu
* Added poll_interval to sidekiq
* Improved CSS for comments
* Updated Gems
* Fix modernizr on ipad
* set default items_count to 0
* Rearanged Asset files into vendor
* Serving twitter widgets.js from own domain

== June 22, 2012
* Added registration reason to edit profil
* Updated Gems