@@ -3,24 +3,41 @@
 <head>
   <title>The change you wanted was rejected (422)</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+    body {
+      background-color: #fff;
+      color: #555;
+      text-align: center;
+      font-family: Arial, Helmet, Freesans, sans-serif;
+      font-smoothing: auto;
+      -webkit-font-smoothing: auto;
+      text-rendering: optimizelegibility;
+    }
+    a:visited,
+    a:hover,
+    a {
+      text-decoration: none;
+      color: #555;
+    }
     div.dialog {
-      width: 25em;
-      padding: 0 4em;
+      width: 480px;
+      padding: 15px 20px 5px 20px;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
       border-right-color: #999;
       border-bottom-color: #999;
+      border-radius: 5px;
+      box-shadow: 0px 0px 5px #bbb;
     }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
   </style>
 </head>
 
 <body>
   <!-- This file lives in public/422.html -->
   <div class="dialog">
+    <a href="/" rel="home" title="World Mathaba Independent News Agency"><img alt="World Mathaba" class="brand" src="/assets/world_mathaba11-05570f0309b7b69f11ada4c845795333.png" title="World Mathaba Independent News Agency"></a>
     <h1>The change you wanted was rejected.</h1>
     <p>Maybe you tried to change something you didn't have access to.</p>
+    <p><a href="/" rel="home" title="World Mathaba Independent News Agency"><b>Back to Home Page</b></a></p>
   </div>
 </body>
 </html>
