@@ -3,10 +3,24 @@
 <head>
   <title>Maintenance or Busy</title>
   <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
+    body {
+      background-color: #fff;
+      color: #555;
+      text-align: center;
+      font-family: Arial, Helmet, Freesans, sans-serif;
+      font-smoothing: auto;
+      -webkit-font-smoothing: auto;
+      text-rendering: optimizelegibility;
+    }
+    a:visited,
+    a:hover,
+    a {
+      text-decoration: none;
+      color: #555;
+    }
     div.dialog {
       width: 480px;
-      padding: 0 20px;
+      padding: 15px 20px 5px 20px;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
       border-right-color: #999;
@@ -20,12 +34,14 @@
 <body>
   <!-- This file lives in public/500.html -->
   <div class="dialog">
+    <a href="/" rel="home" title="World Mathaba Independent News Agency"><img alt="World Mathaba" class="brand" src="/assets/world_mathaba11-05570f0309b7b69f11ada4c845795333.png" title="World Mathaba Independent News Agency"></a>
     <h1>Currently under maintenance or too busy</h1>
     <h3>We are under maintenance or the site is too busy right now.</h3>
     <p>We should be working on it at the moment, please come back in a few minutes.</p>
     <p> If you keep seing this message, please contact us at: 
       <img title="Worldmathaba email" src="https://mnn.s3.amazonaws.com/uploads/attachment/image/946/medium_7d2a40d2-5dad-4dd2-ad1c-014a49184d42.png" alt="Worldmathaba email">
     </p>
+    <p><a href="/" rel="home" title="World Mathaba Independent News Agency"><b>Back to Home Page</b></a></p>
   </div>
 </body>
 </html>
